--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -7,8 +7,13 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
       - name: echo a string
-        run: eccho "Hello world"
+        run: echo "Hello world"
       - name: multiline script
         run: |
           node -v
           npm -v
+      - name: python Command
+        run: |
+          import platform
+          print(platform.processor())
+        shell: python
