--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -19,10 +19,11 @@ jobs:
         shell: python
   run-windows-commands:
     runs-on: windows-latest
+    needs: ["run-shell-command"]
     steps:
       - name: Directory Powershell
         run: Get-Location
       - name: Directory Bash
         run: pwd
         shell: bash
-        
+
