--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -9,7 +9,14 @@ jobs:
     - name: List files
       run: |
         pwd
-        ls
+        ls -a
+    - name: checkout
+      uses: actions/checkout@v1
+
+    - name: List files after checkout
+      run: |
+        pwd
+        ls -a
     - name: simple JS Actions
       id: greet
       uses: actions/hello-world-javascript-action@v1.1
