--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,6 +1,10 @@
 name: Actions workflow
 
-on: push
+on: 
+  push:
+  pull_request:
+    types: [closed, opened, assigned, reopened]
+
 
 jobs:
   run-github-actions:
