--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,7 +1,10 @@
 name: Actions workflow
 
 on: 
-  push:
+  schedule:
+    - cron: "0/5 * * * *"
+    
+  #push:
   pull_request:
     types: [closed, opened, assigned, reopened]
 
